--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "handlebars": "^4.7.8",
+    "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
     "mysql2": "^3.6.0",
     "nodemailer": "^6.9.4",
     "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "pug": "^3.0.2",
     "reflect-metadata": "^0.1.13",
