--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/jwt": "^10.1.0",
+    "@nestjs/jwt": "^10.1.1",
     "@nestjs/mapped-types": "^2.0.2",
     "@nestjs/passport": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
@@ -54,6 +54,7 @@
     "nodemailer": "^6.9.4",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1",
     "passport-kakao": "^1.0.1",
     "passport-local": "^1.0.0",
     "passport-naver-v2": "^2.0.8",
@@ -78,6 +79,7 @@
     "@types/node": "^20.3.1",
     "@types/nodemailer": "^6.4.9",
     "@types/passport-google-oauth20": "^2.0.11",
+    "@types/passport-jwt": "^3.0.9",
     "@types/passport-kakao": "^1.0.0",
     "@types/passport-local": "^1.0.35",
     "@types/supertest": "^2.0.12",
