--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.408.0",
     "@hapi/joi": "^17.1.1",
     "@nestjs-modules/mailer": "^1.9.1",
     "@nestjs/axios": "^3.0.0",
@@ -36,6 +37,7 @@
     "@nestjs/swagger": "^7.1.8",
     "@nestjs/typeorm": "^10.0.0",
     "@nestjs/websockets": "^10.2.0",
+    "aws-sdk": "^2.1453.0",
     "axios": "^1.5.0",
     "babel": "^6.23.0",
     "bcrypt": "^5.1.1",
@@ -51,6 +53,7 @@
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
     "mysql2": "^3.6.0",
+    "nestjs-s3": "^2.0.1",
     "nodemailer": "^6.9.4",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
@@ -76,6 +79,7 @@
     "@types/hapi__joi": "^17.1.10",
     "@types/jest": "^29.5.2",
     "@types/lodash": "^4.14.197",
+    "@types/multer": "^1.4.7",
     "@types/node": "^20.3.1",
     "@types/nodemailer": "^6.4.9",
     "@types/passport-google-oauth20": "^2.0.11",
