--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/mapped-types": "^2.0.2",
     "@nestjs/passport": "^10.0.1",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.2.4",
     "@nestjs/platform-socket.io": "^10.2.0",
     "@nestjs/serve-static": "^4.0.0",
     "@nestjs/swagger": "^7.1.8",
     "@nestjs/typeorm": "^10.0.0",
     "@nestjs/websockets": "^10.2.0",
+    "aws-sdk": "^2.1453.0",
     "axios": "^1.5.0",
     "babel": "^6.23.0",
     "bcrypt": "^5.1.1",
@@ -46,10 +47,13 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
+    "express": "^4.18.2",
     "express-session": "^1.17.3",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "mysql2": "^3.6.0",
     "nodemailer": "^6.9.4",
     "passport": "^0.6.0",
@@ -75,6 +79,7 @@
     "@types/hapi__joi": "^17.1.10",
     "@types/jest": "^29.5.2",
     "@types/lodash": "^4.14.197",
+    "@types/multer": "^1.4.7",
     "@types/node": "^20.3.1",
     "@types/nodemailer": "^6.4.9",
     "@types/passport-google-oauth20": "^2.0.11",
