fix:ci.yaml파일 수정

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,5 +23,5 @@ jobs:
 		- name: Install dependencies
 		run: npm install
 		
-		- name: Run tests
-		run: npm run test
+		- name: Run app
+		run: npm run start
