--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,27 +1,29 @@
+# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
+
 name: Node.js CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ main ]
+    branches: [ "main" ]
 
 jobs:
-	build:
+  build:
 
     runs-on: ubuntu-latest
 
-		steps:
-    - name: Checkout repository
-    uses: actions/checkout@v2
-		
-    - name: Set up Node.js
-    uses: actions/setup-node@v2
-		with:
-		node-version: '18.x'
-		
-		- name: Install dependencies
-		run: npm install
-		
-		- name: Run app
-		run: npm run start
+    strategy:
+      matrix:
+        node-version: [ 18.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    
