--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.408.0",
+    "@aws-sdk/client-s3": "^3.409.0",
+    "@aws-sdk/s3-presigned-post": "^3.409.0",
     "@hapi/joi": "^17.1.1",
     "@nestjs-modules/mailer": "^1.9.1",
     "@nestjs/axios": "^3.0.0",
@@ -64,6 +65,7 @@
     "pug": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "sharp": "^0.32.5",
     "typeorm": "^0.3.17",
     "uuid": "^9.0.0"
   },
