--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,25 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '18.x'
+
+      - name: ⚙️ 환경변수를 설정합니다.
+        env:
+         DATABASE_HOST: ${{ secrets.DATABASE_HOST }}
+         DATABASE_PORT: ${{ secrets.DATABASE_PORT }}
+         DATABASE_USERNAME: ${{ secrets.DATABASE_USERNAME }}
+         DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
+         DATABASE_NAME: ${{ secrets.DATABASE_NAME }}
+         JWT_SECRET_KEY: ${{ secrets.JWT_SECRET_KEY }}
+        run: |
+         pwd
+         touch .env
+         echo "DATABASE_HOST=$DATABASE_HOST" >> .env
+         echo "DATABASE_PORT=$DATABASE_PORT" >> .env
+         echo "DATABASE_USERNAME=$DATABASE_USERNAME" >> .env
+         echo "DATABASE_PASSWORD=$DATABASE_PASSWORD" >> .env
+         echo "DATABASE_NAME=$DATABASE_NAME" >> .env
+         echo "JWT_SECRET_KEY=$JWT_SECRET_KEY" >> .env
+         cat .env
         
         # (3) build (Test 제외)
       - name: Install dependencies
