--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,36 +53,65 @@ jobs:
          echo "DATABASE_NAME=$DATABASE_NAME" >> .env
          echo "JWT_SECRET_KEY=$JWT_SECRET_KEY" >> .env
          cat .env
-        
-        # (3) build (Test 제외)
-      - name: Install dependencies
-        run: npm install
   
-      - name: Build test
+      - name: ✨ 패키지 설치
+        working-directory: ./
+        run: npm install
+
+      - name: ✨ 빌드 과정을 시작
+        working-directory: ./
         run: npm run build
-        
-      # (4) AWS 인증 (IAM 사용자 Access Key, Secret Key 활용)
-      - name: Configure AWS credentials
+
+      - name: 📦 빌드한 코드를 압축
+        run: zip -r backend.zip ./dist ./scripts ./appspec.yml ./.env ./package.json ./eslintrc.js ./prettierrc ./webpack-hmr.config.js
+
+      - name: 🌎 AWS에 접속
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_TEST1 }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_TEST1 }}
           aws-region: ${{ env.AWS_REGION }}
+
+      - name: 🦖 S3에 압축된 서버 코드를 업로드
+        run: aws s3 cp --region ${{ env.AWS_REGION }} ./$GITHUB_SHA s3://$S3_BUCKET_NAME
+
+      - name: 🚀 AWS codeDeploy로 배포를 시작
+        run: aws deploy create-deployment
+          --ignore-application-stop-failures
+          --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME }}
+          --deployment-config-name CodeDeployDefault.AllAtOnce
+          --deployment-group-name ${{ env.CODE_DEPLOY_DEPLOYMENT_GROUP_NAME }}
+          --s3-location bucket=$S3_BUCKET_NAME,key=$GITHUB_SHA.zip,bundleType=zip
+        
+      #   # (3) build (Test 제외)
+      # - name: Install dependencies
+      #   run: npm install
+  
+      # - name: Build test
+      #   run: npm run build
+        
+      # # (4) AWS 인증 (IAM 사용자 Access Key, Secret Key 활용)
+      # - name: Configure AWS credentials
+      #   uses: aws-actions/configure-aws-credentials@v1
+      #   with:
+      #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_TEST1 }}
+      #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_TEST1 }}
+      #     aws-region: ${{ env.AWS_REGION }}
       
-      # (5) 빌드 결과물을 S3 버킷에 업로드
-      - name: Upload to AWS S3
-        run: |
-          aws deploy push \
-            --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME }} \
-            --ignore-hidden-files \
-            --s3-location s3://$S3_BUCKET_NAME/$GITHUB_SHA.zip \
-            --source .
+      # # (5) 빌드 결과물을 S3 버킷에 업로드
+      # - name: Upload to AWS S3
+      #   run: |
+      #     aws deploy push \
+      #       --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME }} \
+      #       --ignore-hidden-files \
+      #       --s3-location s3://$S3_BUCKET_NAME/$GITHUB_SHA.zip \
+      #       --source .
       
-      # (6) S3 버킷에 있는 파일을 대상으로 CodeDeploy 실행
-      - name: Deploy to AWS EC2 from S3
-        run: |
-          aws deploy create-deployment \
-            --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME }} \
-            --deployment-config-name CodeDeployDefault.AllAtOnce \
-            --deployment-group-name ${{ env.CODE_DEPLOY_DEPLOYMENT_GROUP_NAME }} \
-            --s3-location bucket=$S3_BUCKET_NAME,key=$GITHUB_SHA.zip,bundleType=zip
+      # # (6) S3 버킷에 있는 파일을 대상으로 CodeDeploy 실행
+      # - name: Deploy to AWS EC2 from S3
+      #   run: |
+      #     aws deploy create-deployment \
+      #       --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME }} \
+      #       --deployment-config-name CodeDeployDefault.AllAtOnce \
+      #       --deployment-group-name ${{ env.CODE_DEPLOY_DEPLOYMENT_GROUP_NAME }} \
+      #       --s3-location bucket=$S3_BUCKET_NAME,key=$GITHUB_SHA.zip,bundleType=zip
