--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -73,7 +73,7 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
 
       - name: 🦖 S3에 압축된 서버 코드를 업로드
-        run: aws s3 cp --region ${{ env.AWS_REGION }} ./$GITHUB_SHA s3://$S3_BUCKET_NAME
+        run: aws s3 cp --region ${{ env.AWS_REGION }} ./backend.zip s3://my-github-actions-a3-bucket2
 
       - name: 🚀 AWS codeDeploy로 배포를 시작
         run: aws deploy create-deployment
@@ -81,7 +81,7 @@ jobs:
           --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME }}
           --deployment-config-name CodeDeployDefault.AllAtOnce
           --deployment-group-name ${{ env.CODE_DEPLOY_DEPLOYMENT_GROUP_NAME }}
-          --s3-location bucket=$S3_BUCKET_NAME,key=$GITHUB_SHA.zip,bundleType=zip
+          --s3-location bucket=$S3_BUCKET_NAME,key=backend.zip,bundleType=zip
         
       #   # (3) build (Test 제외)
       # - name: Install dependencies
