--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/mapped-types": "^2.0.2",
     "@nestjs/passport": "^10.0.1",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.2.4",
     "@nestjs/platform-socket.io": "^10.2.0",
     "@nestjs/serve-static": "^4.0.0",
     "@nestjs/swagger": "^7.1.8",
@@ -49,10 +49,13 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
+    "express": "^4.18.2",
     "express-session": "^1.17.3",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "mysql2": "^3.6.0",
     "nestjs-s3": "^2.0.1",
     "nodemailer": "^6.9.4",
